--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
   </head>
   <body>
     <div class="container">
@@ -11,7 +13,7 @@
       <div class="buttons">
         <div class="row">
           <button id="ac">Ac</button>
-          <button id="signal">(-)</button>
+          <button id="delete">C</button>
           <button id="left" class="op">%</button>
           <button id="divied" class="op">/</button>
         </div>
