--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <input id="text" type="text" max="15" />
+      <input id="text" type="text" max="15" readonly />
       <div class="buttons">
         <div class="row">
           <button id="ac">Ac</button>
